Corrected HTML for humidity and wind

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <div class="col-sm-7 col-6 current-weather">
               <ul>
                 <li id="description">Clouds</li>
-                <li id="humidity">Humidity: 50%</li>
-                <li id="wind-speed">Wind: 3 m/s</li>
+                <li>Humidity: <span id="humidity">50</span>%</li>
+                <li>Wind: <span id="wind-speed">3</span> m/s</li>
               </ul>
             </div>
           </div>
