Added a link to github repository

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
           </div>
         </div>
       </div>
+      <p>
+        <a href="https://github.com/victory220/weather-app" target="_blank">
+          Open-source code</a
+        >
+        by Victoria Rudnytska
+      </p>
     </div>
     <script src="src/index.js"></script>
   </body>
