--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <h1>Weather forecast</h1>
           <div class="row">
             <div class="col-sm-5 order-2 order-sm-1 text-center">
-              <h2 id="current-city">Kyiv</h2>
-              <p id="current-time">Sunday 14:30</p>
+              <h2 id="current-city">London</h2>
+              <p id="current-time"></p>
             </div>
             <div class="col-sm-7 order-1 order-sm-2 mb-3">
               <div class="row">
@@ -67,7 +67,7 @@
           <div class="row">
             <div class="col-sm-5 col-6 text-center current-weather">
               <!-- <i class="fa-solid fa-cloud-sun weather-emoji"></i> -->
-              <span id="current-temperature">21</span>
+              <span id="current-temperature">20</span>
               <span class="units">
                 <!-- <a href="#" id="show-cels">°C</a>/<a href="#" id="show-fahr">°F</a> -->
                 °C
